<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3B142"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_f"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/text_titulo"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo" />

    <TextView
        android:id="@+id/text_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clave"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/Text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/TextCamp_Nombres"
        app:layout_constraintTop_toBottomOf="@+id/TextCamp_Nombres" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="184dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/baseline_alternate_email_24"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/TextCamp_email"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/Text_email"
        app:layout_constraintTop_toBottomOf="@+id/Text_email" />

    <TextView
        android:id="@+id/text_carrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_carrera"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textCamp_clave"
        app:layout_constraintTop_toBottomOf="@+id/textCamp_clave" />

    <TextView
        android:id="@+id/text_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:text="@string/text_fecha"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <EditText
        android:id="@+id/textCamp_fecha"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:drawableRight="@drawable/baseline_date_range_24"
        android:ems="10"
        android:inputType="date"
        android:text="@string/textCamp_fecha"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_fecha"
        app:layout_constraintTop_toBottomOf="@+id/text_fecha" />

    <EditText
        android:id="@+id/textCamp_clave"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/baseline_password_24"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/textCamp_clave"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_clave"
        app:layout_constraintTop_toBottomOf="@+id/text_clave" />

    <EditText
        android:id="@+id/TextCamp_Nombres"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/baseline_drive_file_rename_outline_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textCamp_Nombres"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_carrera"
        app:layout_constraintTop_toBottomOf="@+id/text_carrera">

        <RadioButton
            android:id="@+id/rb_sistemas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_computer_24"
            android:text="@string/rb_sistemas"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_ambiental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_science_24"
            android:text="@string/rb_ambiental"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_mecanica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_miscellaneous_services_24"
            android:text="@string/rb_mecanica"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_administracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_account_circle_24"
            android:text="@string/rb_administracion"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#275087"
        android:text="@string/text_titulo"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_ApellidosyNombres"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_conv"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="160dp"
        android:text="@string/text_conv"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/text_carrera"
        app:layout_constraintStart_toEndOf="@+id/text_carrera"
        app:layout_constraintTop_toTopOf="@+id/text_carrera" />

    <CheckBox
        android:id="@+id/cb_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_radio"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_conv"
        app:layout_constraintTop_toBottomOf="@+id/text_conv" />

    <CheckBox
        android:id="@+id/cb_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_internet"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/cb_radio"
        app:layout_constraintTop_toBottomOf="@+id/cb_radio" />

    <CheckBox
        android:id="@+id/cb_publicidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_publicidad"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/cb_internet"
        app:layout_constraintTop_toBottomOf="@+id/cb_internet" />

    <CheckBox
        android:id="@+id/cb_amigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_amigo"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/cb_publicidad"
        app:layout_constraintTop_toBottomOf="@+id/cb_publicidad" />

    <Button
        android:id="@+id/button_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#275087"
        android:drawableLeft="@drawable/baseline_send_24"
        android:text="@string/button_enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_amigo" />

</androidx.constraintlayout.widget.ConstraintLayout>